--- a/content/.obsidian/workspace
+++ b/content/.obsidian/workspace
@@ -6,6 +6,17 @@
       {
         "id": "90ff3b5ae13c9430",
         "type": "leaf",
+        "pane-relief:history-v1": {
+          "pos": 0,
+          "stack": [
+            {
+              "leaf": "90ff3b5ae13c9430",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"private/todos.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            }
+          ]
+        },
         "state": {
           "type": "markdown",
           "state": {
@@ -19,101 +30,108 @@
     "direction": "vertical"
   },
   "left": {
-    "id": "408347bdf4ab469b",
-    "type": "mobile-drawer",
+    "id": "5428bc345e2b2c86",
+    "type": "split",
     "children": [
       {
-        "id": "2d7aa5072d6b7905",
-        "type": "leaf",
-        "state": {
-          "type": "file-explorer",
-          "state": {}
-        }
-      },
-      {
-        "id": "0808d9acde0f470a",
-        "type": "leaf",
-        "state": {
-          "type": "search",
-          "state": {
-            "query": "",
-            "matchingCase": false,
-            "explainSearch": false,
-            "collapseAll": false,
-            "extraContext": false,
-            "sortOrder": "alphabetical"
+        "id": "908c3135a360afec",
+        "type": "tabs",
+        "children": [
+          {
+            "id": "2b9f9aa65c708bb0",
+            "type": "leaf",
+            "state": {
+              "type": "file-explorer",
+              "state": {}
+            }
+          },
+          {
+            "id": "5e00ce2974d451c5",
+            "type": "leaf",
+            "state": {
+              "type": "search",
+              "state": {
+                "query": "",
+                "matchingCase": false,
+                "explainSearch": false,
+                "collapseAll": false,
+                "extraContext": false,
+                "sortOrder": "alphabetical"
+              }
+            }
           }
-        }
-      },
-      {
-        "id": "b481d02846e70f6d",
-        "type": "leaf",
-        "state": {
-          "type": "tag",
-          "state": {
-            "sortOrder": "frequency",
-            "useHierarchy": true
-          }
-        }
+        ]
       }
     ],
-    "currentTab": 0
+    "direction": "horizontal",
+    "width": 300
   },
   "right": {
-    "id": "18480268a4ef8027",
-    "type": "mobile-drawer",
+    "id": "1ba6668cb73375e7",
+    "type": "split",
     "children": [
       {
-        "id": "0cf06da825449353",
-        "type": "leaf",
-        "state": {
-          "type": "backlink",
-          "state": {
-            "file": "private/todos.md",
-            "collapseAll": false,
-            "extraContext": false,
-            "sortOrder": "alphabetical",
-            "showSearch": false,
-            "searchQuery": "",
-            "backlinkCollapsed": false,
-            "unlinkedCollapsed": true
+        "id": "f4afa75d185193ef",
+        "type": "tabs",
+        "children": [
+          {
+            "id": "212ffcbb627723aa",
+            "type": "leaf",
+            "state": {
+              "type": "backlink",
+              "state": {
+                "file": "private/todos.md",
+                "collapseAll": false,
+                "extraContext": false,
+                "sortOrder": "alphabetical",
+                "showSearch": false,
+                "searchQuery": "",
+                "backlinkCollapsed": false,
+                "unlinkedCollapsed": true
+              }
+            }
+          },
+          {
+            "id": "559596f067e20611",
+            "type": "leaf",
+            "state": {
+              "type": "outgoing-link",
+              "state": {
+                "file": "private/todos.md",
+                "linksCollapsed": false,
+                "unlinkedCollapsed": true
+              }
+            }
+          },
+          {
+            "id": "4796a63f8e29fe4c",
+            "type": "leaf",
+            "state": {
+              "type": "tag",
+              "state": {
+                "sortOrder": "frequency",
+                "useHierarchy": true
+              }
+            }
+          },
+          {
+            "id": "c07dfa13f68be176",
+            "type": "leaf",
+            "state": {
+              "type": "outline",
+              "state": {
+                "file": "private/todos.md"
+              }
+            }
           }
-        }
-      },
-      {
-        "id": "c053f681e3c7f298",
-        "type": "leaf",
-        "state": {
-          "type": "outgoing-link",
-          "state": {
-            "file": "private/todos.md",
-            "linksCollapsed": false,
-            "unlinkedCollapsed": true
-          }
-        }
-      },
-      {
-        "id": "e953ff231a44f15f",
-        "type": "leaf",
-        "state": {
-          "type": "outline",
-          "state": {
-            "file": "private/todos.md"
-          }
-        }
-      },
-      {
-        "id": "ac86c07b0b12d6be",
-        "type": "leaf",
-        "state": {
-          "type": "advanced-tables-toolbar",
-          "state": {}
-        }
+        ]
       }
     ],
-    "currentTab": 3
+    "direction": "horizontal",
+    "width": 300,
+    "collapsed": true
   },
-  "active": "ac86c07b0b12d6be",
+  "active": "90ff3b5ae13c9430",
   "lastOpenFiles": [
     "che/orbitály.md",
     "dej/1-svetová-vojna.md",
