--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ enableGitInfo = true
         lineNumbersInTable = true
         style = "dracula"
     [frontmatter]
-        lastmod = ["lastmod", ":git", ":fileModTime"]
+        lastmod = ["lastmod", ":fileModTime"] # ":git"
         publishDate = ["publishDate", "date"]
     [markup.goldmark]
         [markup.goldmark.extensions]
