--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ enableGitInfo = true
         lineNumbersInTable = true
         style = "dracula"
     [frontmatter]
-        # lastmod = ["lastmod", ":filemodtime", ":git"]
+        lastmod = ["lastmod", ":filemodtime", ":git"]
     [markup.goldmark]
         [markup.goldmark.extensions]
             definitionList = true
