--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -1,7 +1,7 @@
 {
   "foldHeading": true,
   "foldIndent": false,
-  "defaultViewMode": "source",
+  "defaultViewMode": "preview",
   "showLineNumber": false,
   "alwaysUpdateLinks": true,
   "readableLineLength": false,
