--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ enableGitInfo = true
             title = true
         [markup.goldmark.renderer]
             hardWraps = true
-            unsafe = false
+            unsafe = true
             xhtml = false
     [markup.asciidocExt]
         backend = 'html5'
