--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,13 +19,14 @@ jobs:
         with:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-      - name: Build Link Index
-        uses: jackyzha0/hugo-obsidian@v2.17
-        with:
-          index: true
-          input: content
-          output: assets/indices
-          root: .
+      # TODO: Fix this 
+      # - name: Build Link Index
+      #   uses: jackyzha0/hugo-obsidian@v2.17
+      #   with:
+      #     index: true
+      #     input: content
+      #     output: assets/indices
+      #     root: .
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
