--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,18 +15,18 @@ jobs:
   deploy:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
       # TODO: Fix this 
-      # - name: Build Link Index
-      #   uses: jackyzha0/hugo-obsidian@v2.17
-      #   with:
-      #     index: true
-      #     input: content
-      #     output: assets/indices
-      #     root: .
+      - name: Build Link Index
+        uses: jackyzha0/hugo-obsidian@v2.17
+        with:
+          index: true
+          input: content
+          output: assets/indices
+          root: .
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
@@ -35,7 +35,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify
+        run: hugo --minify --enableGitInfo
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
