--- a/config.toml
+++ b/config.toml
@@ -7,8 +7,8 @@ disablePathToLower = true
 pluralizeListTitles = false
 
 ignoreFiles = [
-    "/content/templates/*",
-    "/content/private/*",
+    "/content/templates/.*",
+    "/content/private/.*",
 ]
 summaryLength = 20
 paginate = 10
@@ -21,6 +21,7 @@ enableGitInfo = true
 
 [frontmatter]
     lastmod = [":git"]
+    title = ["title", ":filename"]
 
 [markup]
     defaultMarkdownHandler = 'goldmark'
