--- a/content/.obsidian/appearance.json
+++ b/content/.obsidian/appearance.json
@@ -1,11 +1,17 @@
 {
-  "baseFontSize": 26,
-  "cssTheme": "yinyang",
+  "baseFontSize": 13,
+  "cssTheme": "Minimal",
   "enabledCssSnippets": [
     "caption",
     "width",
     "latex",
     "fontsize"
   ],
-  "baseFontSizeAction": true
+  "baseFontSizeAction": true,
+  "accentColor": "#80b9e5",
+  "showViewHeader": true,
+  "nativeMenus": false,
+  "interfaceFontFamily": "Ubuntu Mono",
+  "textFontFamily": "Cascadia Code",
+  "monospaceFontFamily": "FiraCode Nerd Font Mono"
 }
