--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,6 +1,6 @@
 name: Pavol Komloš
 enableToc: true
-openToc: false
+openToc: true
 enableLinkPreview: true
 enableLatex: true
 enableCodeBlockTitle: true
@@ -14,10 +14,8 @@ enableGitHubEdit: true
 GitHubLink: https://github.com/plundration/plundration.github.io/tree/hugo/content
 enableSemanticSearch: false
 operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
-description:
-  Poznámky Pavla Komloša
-page_title:
-  "pavolkomlos.xyz"
+description: Poznámky Pavla Komloša
+page_title: "pavolkomlos.xyz"
 links:
   - link_name: Github
     link: https://github.com/plundration
