--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ resources
 # assets/indices/contentIndex.json
 linkmap
 content/.obsidian/workspace
+content/.obsidian/workspace.json
+content/.obsidian/workspaces.json
