--- a/content/.obsidian/appearance.json
+++ b/content/.obsidian/appearance.json
@@ -10,7 +10,7 @@
   "baseFontSizeAction": true,
   "interfaceFontFamily": "Ubuntu Mono",
   "textFontFamily": "Cascadia Code",
-  "monospaceFontFamily": "FiraCode Nerd Font Mono",
+  "monospaceFontFamily": "Cascadia Code",
   "accentColor": "#80b9e5",
   "showViewHeader": true,
   "nativeMenus": false
