Ignore recent-files-obsidian

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ linkmap
 content/.obsidian/workspace
 content/.obsidian/workspace.json
 content/.obsidian/workspaces.json
+content/.obsidian/plugins/recent-files-obsidian/data.json
