--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ public
 resources
 .idea
 linkmap
-# content/.obsidian/workspace.json
+content/.obsidian/workspace.json
 content/.obsidian/plugins/recent-files-obsidian/data.json
